--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "he": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "unescape": "^1.0.1"
   },
